# ai-bom-mcp

./: .cursorrules  .gitignore  .mcp.json  Dockerfile  README.md  acp.json  ai-bom.mcpb  auth_middleware.py  glama.json  llms.txt  manifest.json  pyproject.toml  server.json  server.py  smithery.yaml  test_server.py
.github/: FUNDING.yml
.well-known/: agent-card.json  agent.json  mcp-server-card.json
.well-known/mcp/: server-card.json
tests/: test_tools.py
